--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-native-navigation-layouts",
   "version": "0.0.1",
-  "description": "Helpful layout generators for react-native-navigation",
+  "description": "Utility library for generating layouts for react-native-navigation",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
